--- a/src/index.pug
+++ b/src/index.pug
@@ -16,4 +16,8 @@ block content
 
 		include pug/components/footer
 
+		.js-back-to-top(href='#body')
+			span.js-back-to-top__arrow
+			.js-back-to-top__percent
+
 	include pug/components/analytics
