--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -1,17 +1,18 @@
 header.header
+	.container
+		button.header__burger.btn.js-burger(type="button")
+			span
 
-	button.header__burger.btn.js-burger(type="button")
-		span
+		nav.header__menu
+			.header__list(data-aos="fade-left")
+				each object, key in data.header.menu
+					a.header__link.js-to-anchor(
+						href=object.url
+						data-link=key
+						style=`transition-delay: 0.${(key + 2) + 1}s`
+					)
+						!= object.name
 
-	nav.header__menu
-		.header__list(data-aos="fade-left")
-			each object, key in data.header.menu
-				a.header__link.js-to-anchor(
-					href=object.url
-					data-link=key
-				)
-					!= object.name
-
-			img.header__img(src=data.img.headerImg)
+				img.header__img(src=data.img.headerImg)
 
 			
