--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -4,7 +4,7 @@
 		margin-bottom: 30px;
 
 		opacity: 0;
-		transform: translateY(30px);
+		transform: translateY(0);
 		transition: all 0.6s cubic-bezier(0.39, 0.575, 0.565, 1);
 
 		&.aos-animate {
@@ -18,10 +18,8 @@
 		min-height: 700px;
 		position: relative;
 
-		opacity: 0;
 		transform: translateY(-100px);
 		transition: all 0.6s cubic-bezier(0.39, 0.575, 0.565, 1);
-		transition-delay: 0.6s;
 		
 		&.aos-animate {
 			opacity: 1;
@@ -53,7 +51,6 @@
 
 		&__photo {
 			margin-top: 100px;
-
 			opacity: 0;
 			transform: translateY(-100px);
 			transition: all 0.6s cubic-bezier(0.39, 0.575, 0.565, 1);
